<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nusim</name>
  <version>0.1.2</version>
  <description>Simulated robot environment with walls and cylindrical obstacles</description>
  <maintainer email="ndr.ahmed1@gmail.com">naderahmed</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>turtlelib</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
